fix wrong notifications

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
+  "dependencies":{
+    "qiniu":"^6.1.11",
+    "request": "^2.55.0"
+  },
   "configSchema": {
     "only_markdown": {
       "type": "boolean",
